[package]
name = "rust_domain_searcher_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
axum = { version = "0.7", features = ["http2"] }
hyper = { version = "1", features = ["http2"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "http2", "gzip", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-util = "0.7"
bytesize = "1.3"
parking_lot = "0.12"
once_cell = "1.19"
anyhow = "1"
thiserror = "1"
futures-util = "0.3"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
tokio-stream = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
